--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,21 @@
   "files.associations": {
     "pages.json": "jsonc", // pages.json 可以写注释
     "manifest.json": "jsonc" // manifest.json 可以写注释
-  }
+  },
+  "sqltools.connections": [
+    {
+      "mysqlOptions": {
+        "authProtocol": "default",
+        "enableSsl": "Disabled"
+      },
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 3306,
+      "driver": "MySQL",
+      "name": "本机mysql",
+      "username": "root",
+      "database": "test",
+      "password": ""
+    }
+  ]
 }
